[project]
name = "pytest-unity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest>=8.4.2",
]

[project.entry-points."pytest11"]
pytest-unity = "pytest_unity.plugin"

[tool.uv.build-backend]
module-root = "src"

[build-system]
requires = ["uv_build>=0.11.29,<0.12"]
build-backend = "uv_build"
