[project]
name = "pytest-unity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest>=8.4.2",
]

[project.entry-points."pytest11"]
pytest-unity = "pytest_unity.plugin"

[tool.uv.build-backend]
module-root = "src"

[build-system]
requires = ["uv_build>=0.11.29,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
lint = [
    "mypy>=1.19.1",
    "ruff>=0.15.22",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
    "PT", # flake8-pytest-style
]
fixable = ["I"]
